3.3.64	25nov14	Fix to FileChooser to prevent requester from blocking on asking
		for a directory if a dumpfile is loaded without some amount of
		absolute/relative pathname.
		Updated LZ4 for version r124.
		Fix for x-windows OSX compiles.
3.3.65	01apr15	Added --, -I-, etc. option to port filtering in SST.  Using
		-- for example filters all non-ports from search results.
		Updated LZ4 for version r126.
		Minor warnings fixes.
                Moved TCL_LDADD/TK_LDADD before	FSDB_LDADD to avoid stale
                Tcl library version conflicts.
		Removed appending [31:0] to vcd loaded integer names.
		Reduced recursion depth in GHW signal loader to prevent
		stack overflow crashes.
		Added support for synthetic clocks in FST file.
		Update timetrace marking so it runs quicker for large traces.
3.3.66	05jul15	Faster fsdb initialization.
		Fix vcd recoder loader crash for malformed vcd if signal is 
		declared as bits and a real valued change is encountered for
		the value change.
		Fixed crash in vcd2vzt for vcd files with no value changes
		(likely a malformed vcd).
		Added fsdbReaderResetSignalList() to prevent signals from
		loading over and over when unnecessary.
		Compile fixes for renamed functions and defines in gtk osx.
3.3.67	24sep15	Updated LZ4 for version r131.
		Fixed right justify ascii datatype display.
3.3.68	18nov15	Update copyright date.
		Added named markers capability to From: and To: time value
		input boxes.
		Added support for fixed point binary numbers for both signed 
		and unsigned decimal display types.
3.3.69	03feb16	Added missing EXTLOAD_CFLAGS declarations in configure.ac for
		FSDB detection when only .a files are present (necessary for
		Ubuntu).
		Fixed valgrind warning in fst.c for dead memory allocation.
		Fixed signed fixed point binary number shift for negative
		numbers.
		Added ghw patch for missing enum crash in ghw files.
3.3.70	14feb16	Various warnings fixes from new version of scan-build.