@@ -1529,3 +1529,5 @@
 		numbers.
 		Added ghw patch for missing enum crash in ghw files.
 3.3.70	14feb16	Various warnings fixes from new version of scan-build.
+		Crash fix in Windows for transaction traces (broken since
+		VCD/TIM export in 3.3.61).
